<resources>
    <string name="app_name">Cool Reader</string>
    <string name="mi_search">Search</string>
    <string name="mi_exit">Exit</string>
    <string name="mi_goto">Go to</string>
    <string name="mi_bookmarks">Bookmarks</string>
    <string name="mi_file_open">Open file</string>
    <string name="mi_options">Options</string>
    <string name="mi_font_size_increase">Increase font size</string>
    <string name="mi_font_size_decrease">Decrease font size</string>
    <string name="mi_font_previous">Previous font</string>
    <string name="mi_font_next">Next font</string>
    <string name="progress_please_wait">Please wait</string>
    <string name="progress_starting_cool_reader">Starting Cool Reader</string>
    <string name="progress_loading">Loading document</string>
    <string name="progress_formatting">Formatting document</string>
    <string name="progress_scanning">Scanning directory</string>
    <string name="context_menu_title_bookmark">Bookmark</string>
    <string name="context_menu_title_book">Book</string>
    <string name="context_menu_title_recent_book">Recent book</string>
    <string name="mi_book_open">Open book</string>
    <string name="mi_book_recent_books">Recent books</string>
    <string name="mi_book_file_remove">Delete book file</string>
    <string name="mi_book_recent_remove">Remove from list</string>
    <string name="mi_book_recent_goto">Go to directory</string>
    <string name="mi_book_sort_order">Sorting order</string>
    <string name="mi_book_sort_order_filename">By filename</string>
    <string name="mi_book_sort_order_filename_desc">By filename (desc)</string>
    <string name="mi_book_sort_order_timestamp">By timestamp</string>
    <string name="mi_book_sort_order_timestamp_desc">By timestamp (desc)</string>
    <string name="mi_book_sort_order_author">By author</string>
    <string name="mi_book_sort_order_author_desc">By author (desc)</string>
    <string name="mi_book_sort_order_title">By title</string>
    <string name="mi_book_sort_order_title_desc">By title (desc)</string>
    <string name="mi_bookmark_set">Set bookmark</string>
    <string name="mi_bookmark_goto">Go to bookmark</string>
    <string name="mi_goto_page">Go to page #</string>
    <string name="mi_goto_percent">Go to position %</string>
    <string name="mi_goto_toc">Table of Contents</string>
    <string name="dir_recent_books">Recent Books</string>
    <string name="dir_sd_card">SD Card</string>
    <string name="dir_internal_sd_card">Internal SD Card</string>
    <string name="dir_internal_memory">Internal memory</string>
    <string name="win_title_bookmarks">Bookmarks</string>
    <string name="win_title_toc">Table of Contents</string>
    <string name="win_title_options">Options</string>
    <string name="win_title_search">Search</string>
    <string name="win_title_options_apply">Apply changes?</string>
    <string name="win_title_screen_orientation_change_apply">Apply screen orientation change?</string>
    <string name="tab_options_styles">Styles</string>
    <string name="tab_options_page">Page</string>
    <string name="tab_options_app">App</string>
    <string name="tab_options_controls">Controls</string>
    <string name="tab_options_css">CSS</string>
    <string name="options_font_size">Font size</string>
    <string name="options_font_face">Font face</string>
    <string name="options_font_embolden">Embolden font</string>
    <string name="options_font_antialias">Font antialiasing</string>
    <string name="options_font_antialias_off">No antialias</string>
    <string name="options_font_antialias_on_for_big">On for big fonts</string>
    <string name="options_font_antialias_on_for_all">On for all fonts</string>
    <string name="options_interline_space">Interline space</string>
    <string name="options_inverse_view">Night mode</string>
    <string name="options_color_text">Text color</string>
    <string name="options_color_background">Background color</string>
    <string name="options_color_hue">Hue</string>
    <string name="options_color_saturation">Saturation</string>
    <string name="options_color_brightness">Brightness</string>
    <string name="options_background_texture">Background texture</string>
    <string name="options_hyphenation_dictionary">Hyphenation dictionary</string>
    <string name="options_page_show_titlebar">Show title bar</string>
    <string name="options_page_footnotes">Footnotes</string>
    <string name="options_page_orientation">Orientation</string>
    <string name="options_page_orientation_0">Portrait</string>
    <string name="options_page_orientation_90">Landscape</string>
    <string name="options_page_orientation_180">Portrait (180)</string>
    <string name="options_page_orientation_270">Landscape (270)</string>
    <string name="options_page_orientation_sensor">Sensor</string>
    <string name="options_page_landscape_pages">Landscape pages</string>
    <string name="options_page_landscape_pages_one">One page</string>
    <string name="options_page_landscape_pages_two">Two pages</string>
    <string name="options_page_margin_left">Left margin</string>
    <string name="options_page_margin_right">Right margin</string>
    <string name="options_page_margin_top">Top margin</string>
    <string name="options_page_margin_bottom">Bottom margin</string>
    <string name="options_view_mode">View mode</string>
    <string name="options_view_mode_pages">Pages</string>
    <string name="options_view_mode_scroll">Scroll</string>
    <string name="options_app_fullscreen">Fullscreen mode</string>
    <string name="options_app_show_cover_pages">Cover pages in browser</string>
    <string name="options_value_on">On</string>
    <string name="options_value_off">Off</string>
    <string name="dlg_search_case_sensitive">Case sensitive</string>
    <string name="dlg_search_reverse">Reverse</string>
    <string name="dlg_search_hint">Type text here</string>
    <string name="dlg_button_ok">Ok</string>
    <string name="dlg_button_cancel">Cancel</string>
    <string name="dlg_button_find">Find</string>
    <string name="options_page_animation">Page animation</string>
    <string name="options_controls_enable_volume_keys">Use volume keys for navigation</string>
    <string name="options_app_backlight_screen">Screen backlight brightness</string>
    <string name="options_app_backlight_screen_default">Default</string>
    <string name="options_app_tapzones_normal">Tap zone actions</string>
    <string name="options_app_key_actions">Key actions</string>
    <string name="options_app_trackball_disable">Disable trackball</string>
    <string name="dir_sd_card_2">SD Card 2</string>
    <string name="mi_book_back_to_reading">Current book</string>
    <string name="mi_book_root">Root</string>
    <string name="action_none">(No action)</string>
    <string name="action_pagedown">Next page</string>
    <string name="action_pageup">Previous page</string>
    <string name="action_search">Search</string>
    <string name="action_recent_books_list">Recent books</string>
    <string name="action_exit">Exit</string>
    <string name="action_pageup_10">Back by 10 pages</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_pagedown_10">Forward by 10 pages</string>
    <string name="action_toc">Table of Contents</string>
    <string name="action_go_percent">Go to Percent</string>
    <string name="action_go_page">Go to Page</string>
    <string name="action_go_first_page">First page</string>
    <string name="action_go_last_page">Last page</string>
    <string name="action_file_browser">Open file</string>
    <string name="action_options">Options</string>
    <string name="action_toggle_day_night">Day / night</string>
    <string name="action_reader_menu">Reader Menu</string>
    <string name="options_app_tap_action_short">Tap action</string>
    <string name="options_app_tap_action_long">Long tap action</string>
    <string name="action_touch_screen_toggle_lock">Lock/unlock touch screen</string>
    <string name="action_touch_screen_disabled_toast">Touch screen is locked</string>
    <string name="action_touch_screen_enabled_toast">Touch screen is unlocked</string>
    <string name="action_repeat">(autorepeat)</string>
    <string name="options_app_scan_book_props">Scan properties of all books in directory</string>
    <string name="options_page_titlebar">Title bar options</string>
    <string name="options_page_show_titlebar_chapter_marks">Chapter bound marks</string>
    <string name="options_page_show_titlebar_battery_percent">Battery charge as percent</string>
    <string name="options_page_titlebar_font_size">Font size</string>
    <string name="options_page_titlebar_font_face">Font face</string>
    <string name="options_page_titlebar_font_color">Font color</string>
    <string name="options_page_show_titlebar_title">Show book title</string>
    <string name="options_app_tapzone_hilite">Highlight tap zone on tap</string>
    <string name="options_page_animation_paperbook">Paperbook</string>
    <string name="options_page_animation_none">No animation</string>
    <string name="options_page_animation_slide">Slide</string>
    <string name="options_app_key_long_press">(long press)</string>
    <string name="options_app_key_double_press">(double press)</string>
    <string name="options_app_double_tap_selection">Text selection with double tap</string>
    <string name="mi_select_text">Select text</string>
    <string name="action_toggle_selection_mode">Toggle selection mode</string>
    <string name="action_toggle_selection_mode_off">Selection mode is off</string>
    <string name="action_toggle_selection_mode_on">Selection mode is on. Select text using touch screen.</string>
    <string name="action_go_forward">Forward</string>
    <string name="action_go_back">Back</string>
    <string name="action_toggle_screen_orientation">Toggle screen orientation</string>
    <string name="action_toggle_fullscreen">Toggle fullscreen</string>
    <string name="action_exit_home_screen">Home screen</string>
    <string name="options_color_r">Red</string>
    <string name="options_color_g">Green</string>
    <string name="options_color_b">Blue</string>
    <string name="options_page_show_titlebar_percent">Show position percent</string>
    <string name="options_page_show_titlebar_page_count">Page count</string>
    <string name="options_show_titlebar_page_number">Page number</string>
    <string name="options_controls_flick_brightness">Brightness control by flick</string>
    <string name="options_controls_flick_brightness_right">Right edge</string>
    <string name="options_controls_flick_brightness_left">Left edge</string>
    <string name="options_controls_flick_brightness_none">Disabled</string>
    <string name="options_page_show_titlebar_page_number">Page number</string>
    <string name="options_app_dictionary">Dictionary</string>
    <string name="action_zoom_in">Increase font size</string>
    <string name="options_font_kerning">Font kerning</string>
    <string name="action_zoom_out">Decrease font size</string>
    <string name="options_style_floating_punctuation">Floating punctuation</string>
    <string name="action_toggle_document_styles">Toggle document styles</string>
    <string name="options_style_document_embedded_styles">Document embedded styles</string>
    <string name="dlg_about">About CoolReader</string>
    <string name="dlg_book_info">Book Info</string>
    <string name="mi_tts_play">Read Aloud</string>
    <string name="action_open_last_book">Switch to previous book</string>
    <string name="action_toggle_autoscroll">Autoscroll</string>
    <string name="action_toggle_text_autoformat">Toggle text autoformat</string>
    <string name="interline_space_increase">interline space increase</string>
    <string name="interline_space_decrease">interline space decrease</string>
    <string name="dlg_button_back">Back</string>
</resources>