<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/cr3_mi_font_size_increase "
        android:numericShortcut="3"
        android:orderInCategory="1"
        android:title="@string/mi_font_size_increase"
        android:titleCondensed="@string/mi_font_size_increase">
    </item>
    <item
        android:id="@+id/cr3_mi_font_size_decrease "
        android:numericShortcut="4"
        android:orderInCategory="2"
        android:title="@string/mi_font_size_decrease"
        android:titleCondensed="@string/mi_font_size_decrease">
    </item>
    <item
        android:id="@+id/cr3_mi_font_next"
        android:icon="@drawable/cr3_option_font_face"
        android:numericShortcut="6"
        android:orderInCategory="3"
        android:title="@string/mi_font_next"
        android:titleCondensed="@string/mi_font_next">
    </item>
    <item
        android:id="@+id/cr3_mi_font_previous"
        android:icon="@drawable/cr3_option_font_face"
        android:numericShortcut="6"
        android:orderInCategory="4"
        android:title="@string/mi_font_previous"
        android:titleCondensed="@string/mi_font_previous">
    </item>
    <item
        android:id="@+id/cr3_mi_interline_space_increase "
        android:numericShortcut="6"
        android:orderInCategory="5"
        android:title="@string/interline_space_increase"
        android:titleCondensed="@string/interline_space_increase">
    </item>
    <item
        android:id="@+id/cr3_mi_interline_space_decrease"
        android:numericShortcut="6"
        android:orderInCategory="6"
        android:title="@string/interline_space_decrease"
        android:titleCondensed="@string/interline_space_decrease">
    </item>
        <item
        android:id="@+id/cr3_mi_search"
        android:icon="@android:drawable/ic_menu_search"
        android:numericShortcut="1"
        android:orderInCategory="7"
        android:title="@string/mi_search"
        android:titleCondensed="@string/mi_search">
    </item>
    <item
        android:id="@+id/cr3_mi_tts_play"
        android:numericShortcut="2"
        android:orderInCategory="8"
        android:title="@string/mi_tts_play"
        android:titleCondensed="@string/mi_tts_play">
    </item>
    <item
        android:id="@+id/cr3_mi_gotopage"
        android:icon="@drawable/ic_menu_goto"
        android:numericShortcut="6"
        android:orderInCategory="9"
        android:title="@string/mi_goto"
        android:titleCondensed="@string/mi_goto">
        <menu>
            <item
                android:id="@+id/cr3_mi_go_page"
                android:numericShortcut="1"
                android:title="@string/mi_goto_page"
                android:titleCondensed="@string/mi_goto_page">
            </item>
            <item
                android:id="@+id/cr3_mi_go_percent"
                android:numericShortcut="2"
                android:title="@string/mi_goto_percent"
                android:titleCondensed="@string/mi_goto_percent">
            </item>
            <item
                android:id="@+id/cr3_mi_toggle_autoscroll"
                android:numericShortcut="3"
                android:title="@string/action_toggle_autoscroll"
                android:titleCondensed="@string/action_toggle_autoscroll">
            </item>
            <item
                android:id="@+id/cr3_go_toc"
                android:numericShortcut="4"
                android:title="@string/mi_goto_toc"
                android:titleCondensed="@string/mi_goto_toc">
            </item>
            <item
                android:id="@+id/cr3_go_back"
                android:numericShortcut="5"
                android:title="@string/action_go_back"
                android:titleCondensed="@string/action_go_back">
            </item>
            <item
                android:id="@+id/cr3_go_forward"
                android:numericShortcut="6"
                android:title="@string/action_go_forward"
                android:titleCondensed="@string/action_go_forward">
            </item>
            <item
                android:id="@+id/cr3_go_previous_book"
                android:numericShortcut="7"
                android:title="@string/action_open_last_book"
                android:titleCondensed="@string/action_open_last_book">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/cr3_mi_bookmarks"
        android:icon="@drawable/ic_menu_mark"
        android:numericShortcut="6"
        android:orderInCategory="10"
        android:title="@string/mi_bookmarks">
    </item>
    <item
        android:id="@+id/cr3_mi_select_text"
        android:icon="@android:drawable/ic_menu_edit"
        android:numericShortcut="6"
        android:orderInCategory="11"
        android:title="@string/mi_select_text"
        android:titleCondensed="@string/mi_select_text">
    </item>
    <item
        android:id="@+id/cr3_mi_options"
        android:icon="@android:drawable/ic_menu_preferences"
        android:numericShortcut="6"
        android:orderInCategory="12"
        android:title="@string/mi_options"
        android:titleCondensed="@string/mi_options">
    </item>
    <item
        android:id="@+id/cr3_mi_toggle_day_night"
        android:icon="@android:drawable/ic_menu_view"
        android:numericShortcut="7"
        android:orderInCategory="13"
        android:title="@string/action_toggle_day_night"
        android:titleCondensed="@string/action_toggle_day_night">
    </item>
    <item
        android:id="@+id/cr3_mi_toggle_document_styles"
        android:numericShortcut="8"
        android:orderInCategory="14"
        android:title="@string/action_toggle_document_styles"
        android:titleCondensed="@string/action_toggle_document_styles">
    </item>
    <item
        android:id="@+id/cr3_mi_toggle_text_autoformat"
        android:numericShortcut="9"
        android:orderInCategory="15"
        android:title="@string/action_toggle_text_autoformat"
        android:titleCondensed="@string/action_toggle_document_styles">
    </item>
    <item
        android:id="@+id/cr3_mi_about"
        android:numericShortcut="6"
        android:orderInCategory="16"
        android:title="@string/dlg_about"
        android:titleCondensed="@string/dlg_about">
    </item>
    <item
        android:id="@+id/cr3_mi_book_info"
        android:numericShortcut="6"
        android:orderInCategory="17"
        android:title="@string/dlg_book_info"
        android:titleCondensed="@string/dlg_book_info">
    </item>
    <item
        android:id="@+id/cr3_mi_toggle_autoscroll"
        android:numericShortcut="6"
        android:orderInCategory="18"
        android:title="@string/action_toggle_autoscroll"
        android:titleCondensed="@string/action_toggle_autoscroll">
    </item>
    <item
        android:id="@+id/cr3_mi_open_file"
        android:icon="@drawable/ic_menu_archive"
        android:numericShortcut="6"
        android:orderInCategory="19"
        android:title="@string/mi_file_open"
        android:titleCondensed="@string/mi_file_open">
    </item>
    <item
        android:id="@+id/cr3_mi_exit"
        android:icon="@drawable/cr3_viewer_exit"
        android:numericShortcut="6"
        android:orderInCategory="20"
        android:title="@string/mi_exit"
        android:titleCondensed="@string/mi_exit">
    </item>

</menu>