<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base_dialog"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="1200dip"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/base_dlg_button_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:minWidth="?android:attr/listPreferredItemHeight"
        android:paddingRight="?android:attr/scrollbarSize" >

        <ImageButton
            android:id="@+id/base_dlg_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:background="@null"
            android:contentDescription="@string/dlg_button_back"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/cr3_button_prev" />

        <TextView
            android:id="@+id/base_dlg_title"
            style="@style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="4dip"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:layout_marginTop="4dip"
            android:layout_weight="1"
            android:singleLine="false"
            android:text="Test"
            android:textColor="#000000" />

        <ImageButton
            android:id="@+id/base_dlg_btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:background="@null"
            android:contentDescription="@string/dlg_button_ok"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/cr3_button_ok" />
            />

        <ImageButton
            android:id="@+id/base_dlg_btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:background="@null"
            android:contentDescription="@string/dlg_button_cancel"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/cr3_button_cancel" />
            />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/base_dialog_content_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="0dip"
        android:layout_marginRight="0dip"
        android:layout_weight="100"
        android:gravity="top" >
    </FrameLayout>

</LinearLayout>
